--- a/Marketplace/Views/Account/MyProfile.cshtml
+++ b/Marketplace/Views/Account/MyProfile.cshtml
@@ -26,6 +26,6 @@
         }
     </div>
 </div>
-
+//TODO learn how to save images in db and how to retrieve them properly-> maybe compressed? Advertisements table that contains the userguid fk, id primary key,advertisement picture in binary, description nvarchar, title nvarchar and price idk what type + Create An Advertisement html page (containing BROWSE for img -> what types do u accept/ how big should it be max/min etc)+ ViewModel for creating an advertisement + UserProfile table + UserProfile view model + fix displaying stuff here dont bother fixing authorization issues just yet
 
 }
