--- a/Marketplace/Views/Shared/_Layout.cshtml
+++ b/Marketplace/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
             </div>
         </nav>
     </header>
-    <div class="container"> @*made changes here*@
+    <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
