--- a/Marketplace/Views/Account/MyProfile.cshtml
+++ b/Marketplace/Views/Account/MyProfile.cshtml
@@ -1,44 +1,63 @@
-﻿@model IEnumerable<Marketplace.Models.AdvertisementModel>
+﻿@model IEnumerable<Marketplace.ViewModels.AdvertisementViewModel>
 @{
+    var countAds = @Model.Count();
+
+    var countRows = 0;
+    var countCols = 0;
+
+    if (countAds >= 4)
+    {
+        countCols = 4;
+    }
+    else
+    {
+        countCols = countAds;
+    }
+
+    if (countAds % 4 == 0)
+    {
+        countRows = countAds / 4;
+    }
+    else
+    {
+        countRows = (int)Math.Ceiling(countAds / 4.0);
+    }
 }
 <h3>Profile Picture</h3>
 <h3>Description</h3>
 <a asp-action="Create" asp-controller="Advertisement" class="btn btn-primary mb-4">Create An Advertisement</a> @*this should redirect to CreateAdvertisement view*@
 
-@if (@Model.Count()==0)
+@if (countAds==0)
 {
     <h3>You have no advertisements. Consider creating one.</h3>
 }
 else
 {
 <h3>My Advertisements</h3>
-    @for (int i=0;i<10;i++)
-    {
-        <div class="container .container-fluid">
-      
-            <div class="row">
-                 @for (int j=0;j<3;j++)
-                 {
-                    @foreach (var ad in @Model)
-                    {
+    
+       @* <div class="container .container-fluid">
+                <div class="row">
+            @foreach (var ad in @Model)
+            {
                         <div class="card col-sm border border-primary rounded p-0 mb-3 mx-1">
-                            <img src="data:image/png;base64,@ad.Image" class="card-img-top item-img">
-                            <div class="card-body text-center">
-                                <h5 class="card-title">@ad.Title</h5>
-                            </div>
-                            <div class="card-footer text-center ">
-                                <h3>@ad.Price EUR</h3>
-                                <button class="btn btn-dark">SHOW</button>
-                                <button class="btn btn-warning">EDIT</button>
-                                <button class="btn btn-danger">DELETE</button>
-                            </div>
+                                <img src="data:image;base64,@ad.ImageInBase64" class="card-img-top item-img">
+                                <div class="card-body text-center">
+                                    <h5 class="card-title">@ad.Title</h5>
+                                </div>
+                                <div class="card-footer text-center ">
+                                    <h3>@ad.Price EUR</h3>
+                                    <button class="btn btn-dark">SHOW</button>
+                                    <button class="btn btn-warning">EDIT</button>
+                                    <button class="btn btn-danger">DELETE</button>
+                                </div>
+
+                    
+                </div>
+            }
                         </div>
-                    }
-                   }
-            </div>
-        </div>
-    }
-}
-@section Scripts
-{
+        
+        </div>*@
+
+        //TODO Display advertisements correctly
+    
 }
