--- a/Marketplace/Views/Account/MyProfile.cshtml
+++ b/Marketplace/Views/Account/MyProfile.cshtml
@@ -21,13 +21,29 @@ else
             <div class="row">
             @for (var j = 0; j < 4; j++) // I want 4 columns on current row
             {
+                @if (i+j==countAds-1 && j==0) // when we have 1 ad on one row, display it a certain way
+                {
+                    var ad = Model.ElementAt(i+j);
+
+                    <div class="card col-sm-5 border border-primary rounded p-0 mb-3 mx-1">
+                        <partial name="_AdvertisementColumnPartial" model=ad />
+                    </div>
+                    break;
+                }
+
                 @if (i+j==countAds) // stop displaying if we've reached the end
                 {
                     break;
                 }
 
+
+                //TODO make the buttons of each advertisement work. (you need a view for editing and a view for showing a particular ad, modal for deleting)
+                //TODO display advertisement location and category
+
                 var currentAd = Model.ElementAt(i+j);
+                <div class="card col-sm border border-primary rounded p-0 mb-3 mx-1">
                 <partial name="_AdvertisementColumnPartial" model=currentAd />
+                </div>
             }
             </div>
         }
