Small front-end changes. Added MyProfile in nav bar.

--- a/Marketplace/Views/Shared/_AdvertisementColumnPartial.cshtml
+++ b/Marketplace/Views/Shared/_AdvertisementColumnPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Marketplace.ViewModels.AdvertisementViewModel;
 
 
-<img src="data:image;base64,@Model.ImageInBase64" width="200px" height="200px" class="card-img-top">
+<img src="data:image;base64,@Model.ImageInBase64" height="200px" class="card-img-top">
 
 <div class="card-body text-center">
     <h6 class="card-title">@Model.Title</h6>
