--- a/Marketplace/Views/Shared/_LogInOrRegisterPartial.cshtml
+++ b/Marketplace/Views/Shared/_LogInOrRegisterPartial.cshtml
@@ -1,6 +1,21 @@
 ﻿@inject Microsoft.AspNetCore.Identity.SignInManager<Microsoft.AspNetCore.Identity.IdentityUser> _signInManager
 
-@if (@_signInManager.IsSignedIn(User))
+<ul class="navbar-nav flex-grow-1">
+    <li class="nav-item">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+    </li>
+    @if (_signInManager.IsSignedIn(User))
+    {
+        <li class="nav-item">
+            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="MyProfile">My Profile</a>
+        </li>
+    }
+</ul>
+
+@if (_signInManager.IsSignedIn(User))
 {
     <h5 class="text-black-50 m-3">@User.Identity.Name</h5>
     <ul class="navbar-nav">
