--- a/Marketplace/Views/Advertisement/Create.cshtml
+++ b/Marketplace/Views/Advertisement/Create.cshtml
@@ -5,18 +5,18 @@
     <div asp-validation-summary=All ></div>
     <div class="form-group mb-3">
         <label asp-for=Image></label><br />
-        <img src="#" hidden alt="img" id="adImage"/>
+        <img class="mb-3 border border-primary" src="#" hidden alt="img" id="adImage"/>
         <input asp-for=Image type="file" onchange="readURL(this)" accept="image/jpeg, image/png" class="form-control"/>
         <span asp-validation-for=Image></span>
     </div>
     <div class="form-group mb-3">
         <label asp-for=Title></label>
-        <input class="form-control" asp-for=Title placeholder="Title"/>
+        <input class="form-control form-control-lg" asp-for=Title placeholder="Title"/>
         <span asp-validation-for=Title></span>
     </div>
     <div class="form-group mb-3">
         <label asp-for=Description></label>
-        <input class="form-control" asp-for=Description placeholder="Description"/>
+        <textarea class="form-control" asp-for=Description rows="3"></textarea>
         <span asp-validation-for=Description></span>
     </div>
     <div class="form-group mb-3">
@@ -41,18 +41,17 @@
 @section Scripts
 {
     <script>
-  function readURL(input) {
-  if (input.files && input.files[0]) {
-    var reader = new FileReader();
+        function readURL(input) {
+            if (input.files && input.files[0]) {
+                var reader = new FileReader();
 
-    reader.onload= function (e) {
-      $('#adImage').attr('src', e.target.result).width(314).height(242);
-    };
+                reader.onload= function (e) {
+                $('#adImage').attr('src', e.target.result).width(314).height(242);
+                };
 
-    reader.readAsDataURL(input.files[0]);
-    $('#adImage').removeAttr('hidden');
-
-  }
-}
-  </script>
+                reader.readAsDataURL(input.files[0]);
+                $('#adImage').removeAttr('hidden');
+            }
+        }
+    </script>
 }
