--- a/Marketplace/Views/Advertisement/Edit.cshtml
+++ b/Marketplace/Views/Advertisement/Edit.cshtml
@@ -79,6 +79,14 @@
 @section Scripts
 {
     <script>
+        window.onload=function()
+        {
+            // 
+            //
+        }
+
+    </script>
+    <script>
         function readURL(input,imageId) {
             if (input.files && input.files[0]) {
                 var reader = new FileReader();
