Split AdvertisementViewModel into 2 viewmodels.

--- a/Marketplace/Views/Account/MyProfile.cshtml
+++ b/Marketplace/Views/Account/MyProfile.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Marketplace.ViewModels
-@model IEnumerable<Marketplace.ViewModels.AdvertisementViewModel>
+@model IEnumerable<Marketplace.ViewModels.CreateAdvertisementViewModel>
 @{
     var countAds = @Model.Count();
 }
