--- a/Marketplace/Views/Advertisement/Create.cshtml
+++ b/Marketplace/Views/Advertisement/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Marketplace.ViewModels.AdvertisementViewModel
+﻿@model Marketplace.ViewModels.CreateAdvertisementViewModel
 
 <form class="form-control border border-primary" method="post" asp-action="Create" asp-controller="Advertisement" enctype='multipart/form-data'>
     <h3 class="text-center mb-3">Create An Advertisement</h3>
