--- a/Marketplace/Views/Shared/_AdvertisementColumnPartial.cshtml
+++ b/Marketplace/Views/Shared/_AdvertisementColumnPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model Marketplace.ViewModels.AdvertisementViewModel;
+﻿@model Marketplace.ViewModels.CreateAdvertisementViewModel;
 
 <img src="data:image;base64,@Model.ImageInBase64" class="card-img-top">
 
